--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
-    "@types/marked": "^5.0.2",
     "axios": "^1.5.0",
     "date-fns": "^4.1.0",
     "element-plus": "^2.3.12",
+    "highlight.js": "^11.11.1",
     "marked": "^15.0.8",
     "pinia": "^2.1.6",
     "sse.js": "^2.6.0",
@@ -21,6 +21,7 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@types/highlight.js": "^9.12.4",
     "@types/node": "^20.6.2",
     "@vitejs/plugin-vue": "^4.3.4",
     "sass": "^1.66.1",
